<resources>
    <string name="app_name">GH16-Leshchenko</string>
    <string name="textListView">Go to the recycler view</string>
    <string name="textRecyclerView">Go to the list view</string>

    <string name="birthday">Birthday: </string>
    <string name="gender">Gender: </string>
    <string name="followers">Followers: </string>
    <string name="button_google">Google</string>
    <string name="error">Information not found</string>

    <string name="email">Email: </string>
    <string name="public_repo">Repositories: </string>
    <string name="location">Location: </string>
    <string name="button_git">Git</string>

    <string name="textSwitchListView">List view</string>
    <string name="textSwitchRecyclerView">Recycler view</string>
    <string name="PickGetImage">Pick/Get image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>

    <string name="PickGetImageTitle">Pick / Get image</string>
    <string name="Contacts">Contacts</string>

    <string name="itemRecyclerView">Recycler view</string>
    <string name="itemListView">List view</string>

    <string name="hintName">Input name</string>
    <string name="hintNumber">Input number</string>
    <string name="buttonAdd">Add</string>

    <string name="RefreshBase">Fill base</string>

    <string name="search_hint">Search</string>

    search_hint

</resources>
